# notiapply

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.sh  schema.sql
app/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
docs/: ARCHITECTURE.md  SETUP.md  STYLE.md  TESTING.md
examples/: cover_letter_example.tex  resume_example.tex
migrations/: 20250101000000_init.sql  20260307132940_add_company_logo_url.sql  20260309100000_add_contacts.sql  20260318000000_enhance_crm_and_observability.sql  20260319000001_add_company_enrichment_columns.sql  20260319000002_add_analytics_indexes.sql  20260320000000_add_missing_foreign_key_indexes.sql  20260321000000_add_browser_agent_config.sql  20260321000001_add_job_contact_extraction.sql  20260412000000_add_relevance_score.sql  20260412000001_add_liveness_check.sql  20260412000002_add_draft_answers.sql  20260412000003_register_liveness_check_module.sql  20260412100000_add_email_columns.sql  20260412100001_contacts_updated_at_trigger.sql  20260412100002_contacts_fk_index_and_on_delete.sql  20260412100003_scraper_runs_unique_daily.sql  20260415000000_add_bounce_reason.sql  20260422120000_fix_workflow_ids_and_add_config_schemas.sql  20260424100000_drop_scraper_runs_unique_daily.sql
scripts/: check-schema-sync.mjs  check-schema-sync.ts
server/: apply_diff.py  audit_db.py  check_verification_email.py  (+4 more)
(+179 files in other folders)
