[package]
name = "notiapply"
version = "0.1.0"
description = "Notiapply — automated job application pipeline"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
uuid = { version = "1.0", features = ["v4"] }
